Time Tracking
- new Time component.
- added creation and end date in Board.js
- board knows when the player wins or not.
- when cell is revealed now it evaluates when the game is over checking mines vs cells.
- swagger updated.
